# cmake-project-template

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml  ci.yml  clang-format.yml  test.yml  ubuntu.yml  windows.yml
app/: CMakeLists.txt
app/src/: main.cpp
app/test/: test.cpp
cmake/: compiler_features.cmake  compiler_warnings.cmake  conan.cmake  cotire.cmake
new_project_name/: CMakeLists.txt
new_project_name_test/: CMakeLists.txt
new_project_name_test/src/: unit.cpp
project_name/: CMakeLists.txt
project_name/src/: main.cpp
project_name_test/: CMakeLists.txt
project_name_test/src/: unit.cpp
scripts/: gen  gen.bat  test  test.bat
test/: CMakeLists.txt
